v1.10.x/connectors/database/mssql.mdx
---
title: MSSQL Connector | OpenMetadata SQL Server Integration Guide
description: Connect your Microsoft SQL Server to OpenMetadata with our comprehensive MSSQL connector guide. Step-by-step setup, configuration, and metadata extraction.
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import ConfigureIngestion from '/snippets/connectors/database/configure-ingestion.mdx'
import AdvancedConfiguration from '/snippets/connectors/database/advanced-configuration.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'
import Related from '/snippets/v1.10.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/mssql.webp'
name="MSSQL"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Reverse Metadata (OpenMetadata Only)", "Auto-Classification"]}
unavailableFeatures={["Owners", "Tags", "SSIS packages"]} />
In this section, we provide guides and references to use the MSSQL connector.
Configure and schedule MSSQL metadata and profiler workflows from the OpenMetadata UI:
- [Remote-Connection](#for-remote-connection)
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Query Usage](/v1.10.x/connectors/ingestion/workflows/usage)
- [Data Profiler](/v1.10.x/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v1.10.x/how-to-guides/data-quality-observability/quality)
- [Lineage](/v1.10.x/connectors/ingestion/lineage)
- [dbt Integration](/v1.10.x/connectors/database/dbt)
- [Troubleshooting](/v1.10.x/connectors/database/mssql/troubleshoot)

## Requirements
MSSQL User must grant `SELECT` privilege to fetch the metadata of tables and views.
```sql
-- Create a new user
-- More details https://learn.microsoft.com/en-us/sql/t-sql/statements/create-user-transact-sql?view=sql-server-ver16
CREATE USER Mary WITH PASSWORD = '********';
-- Grant SELECT on table
GRANT SELECT TO Mary;
```
### Usage & Lineage consideration
To perform the query analysis for Usage and Lineage computation, we fetch the query logs from `sys.dm_exec_cached_plans`, `sys.dm_exec_query_stats` &  `sys.dm_exec_sql_text` system tables. To access these tables your user must have `VIEW SERVER STATE` privilege.
```sql
GRANT VIEW SERVER STATE TO YourUser;
```
### For Remote Connection
#### 1. SQL Server running
Make sure the SQL server that you are trying to connect is in running state.
#### 2. Allow remote connection on MSSMS(Microsoft SQL Server Management Studio)
This step allow the sql server to accept remote connection request.
<img src="/public/images/connectors/mssql/remote-connection.png" alt="Remote Connection" />
#### 3. Configure Windows Firewall
If you are using SQL server on windows, you must configure the firewall on the computer running SQL Server to allow access.
**Step 1**: On the Start menu, select Run, type WF.msc, and then select OK.
**Step 2**: In the Windows Firewall with Advanced Security, in the left pane, right-click Inbound Rules, and then select New Rule in the action pane.
**Step 3**: In the Rule Type dialog box, select Port, and then select Next.
**Step 4**: In the Protocol and Ports dialog box, select TCP. Select Specific local ports, and then type the port number of the instance of the Database Engine, such as 1433 for the default instance. Select Next.
**Step 5**: In the Action dialog box, select Allow the connection, and then select Next.
**Step 6**: In the Profile dialog box, select any profiles that describe the computer connection environment when you want to connect to the Database Engine, and then select Next.
**Step 7**: In the Name dialog box, type a name and description for this rule, and then select Finish.
For details step please refer to this [link](https://docs.microsoft.com/en-us/sql/database-engine/configure-windows/configure-a-windows-firewall-for-database-engine-access?view=sql-server-ver15).
## Metadata Ingestion
<MetadataIngestionUi connector={"MSSQL"} selectServicePath={"/public/images/connectors/mssql/select-service.png"} addNewServicePath={"/public/images/connectors/mssql/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/mssql/service-connection.png"} />
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **Connection Scheme**: Defines how to connect to MSSQL. We support `mssql+pytds`, `mssql+pyodbc`, and `mssql+pymssql`. (If you are using windows authentication from a linux deployment please use pymssql)
- **Username**: Specify the User to connect to MSSQL. It should have enough privileges to read all the metadata.
- **Password**: Password to connect to MSSQL.
- **Host and Port**: Enter the fully qualified hostname and port number for your MSSQL deployment in the Host and Port field.
- **URI String**: In case of a `pyodbc` connection.
- **Database**: The initial database to establish a connection to the data source.
- **Ingest All Databases**: If you need to ingest multiple databases - aside from the initial one above - you can enable this option.
</Step>
<AdvancedConfiguration />
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>

<Related />
